# activist-terminal

./: .env.example  Makefile  README.md  docker-compose.yml  index.html
pipelines/: pyproject.toml
pipelines/src/activist_pipelines/analytics/: event_study.py
pipelines/src/activist_pipelines/api/: main.py
pipelines/tests/: test_event_study_golden.py
web/prisma/: schema.prisma
