[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "activist-pipelines"
version = "0.1.0"
description = "Data ingestion and event-study analytics for Activist Terminal"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "pandas>=2.1",
    "numpy>=1.26",
    "scipy>=1.12",
    "httpx>=0.27",
    "pydantic>=2.5",
    "python-dotenv>=1.0",
    "yfinance>=0.2",
    "ratelimit>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.9",
    "types-psycopg2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/activist_pipelines"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
